$Id: CHANGES,v 1.20 1999/11/21 15:39:45 tiniou Exp $

Changes between versions 0.4b10 and 0.4b11 (released ????????????????)
======================================================================

1.	Added a '--enable-kerberos' to configure.

Changes between versions 0.4b9 and 0.4b10 (released November 21, 1999)
======================================================================

1.	Make configure test if the system glob routines support 
	extended syntax (ALTDIRFUNC). If not, use the internal glob
	routines instead of system ones. Thanks to Bernhard Sadlowski 
	<sadlowsk@Mathematik.Uni-Bielefeld.DE> for reporting the bug
	and helping me resolve this and other minor libc5 compiling
	glitches.

2.	Fix a problem when dumping a ext2fs with the 'filetype'
	feature enabled. Thanks to Patrick J. LoPresti 
	<patl@cag.lcs.mit.edu> for reporting the bug and to
	Theodore Y. Ts'o <tytso@mit.edu> for providing the patch.

3.	Made the nodump flag work on directories. A directory which
	has the nodump flag gets never dumped, regardless of its
	contents.

4.	Integrate a patch from Jeremy Fitzhardinge <jeremy@goop.org>
	which allows dump on an active ext3 filesystem. However, this
	is a "quick and dirty" patch which enables backup of an ext3
	filesystem through the ext2 compatibility (by ignoring the
	NEEDS_RECOVERY bit). The journal file is not recognized and
	it is dumped (it should not). 

5.	Test the superblock compatibility flags when dumping, in order
	to be sure that we know how to deal with specific features.

Changes between versions 0.4b8 and 0.4b9 (released November 5, 1999)
====================================================================

1.	Use lchown instead of chown, fixing a possible security problem 
	when restoring symlinks (a malicious user could use this
	to deliberately corrupt the ownership of important system files).
	Thanks to Chris Siebenmann <cks@utcc.utoronto.ca> for detecting
	this and providing the patch.
