@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.10 1999/11/21 02:24:45 tiniou Exp $
+$Id: THANKS,v 1.11 1999/11/22 19:08:47 tiniou Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -23,6 +23,7 @@ suggested various improvements.
 Here is a partial list of them (if I have forgotten someone, please complain):
 
 Stephen Carr		sgcarr@civeng.adelaide.edu.au
+Rob Cermak		cermak@ahab.rutgers.edu
 Abhijit Dasgupta	abhijit@ans.net
 Jeremy Fitzhardinge	jeremy@goop.org
 Eirik Fuller		eirik@netcom.com
