@@ -1,9 +1,14 @@
-$Id: CHANGES,v 1.20 1999/11/21 15:39:45 tiniou Exp $
+$Id: CHANGES,v 1.21 1999/11/22 19:08:47 tiniou Exp $
 
 Changes between versions 0.4b10 and 0.4b11 (released ????????????????)
 ======================================================================
 
 1.	Added a '--enable-kerberos' to configure.
+
+2.	Added a 'S' option to dump which determines the amount of space
+	that is needed to perform the dump without actually doint it, similar
+	to the Sun's ufsdump 'S' option. Patch contributed by Rob Cermak
+	<cermak@ahab.rutgers.edu>.
 
 Changes between versions 0.4b9 and 0.4b10 (released November 21, 1999)
 ======================================================================
